--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
     --dark: #0E2E50;
 }
 
+
 .back-to-top {
     position: fixed;
     display: none;
@@ -16,6 +17,7 @@
 body{
     background-color: #fff;
     margin-left: 2rem;
+    margin-right: 2rem;
 }
  
 
@@ -102,6 +104,8 @@ body{
 }
 
 
+
+
 @media (max-width: 991.98px) {
     .nav-bar {
         margin: 0;
@@ -126,6 +130,8 @@ body{
     color: var(--dark);
     font-weight: 500;
 }
+
+
 
 @media (min-width: 992px) {
     .navbar .nav-item .dropdown-menu {
@@ -190,6 +196,8 @@ body{
         left: 25px;
     }
 }
+
+
 
 .breadcrumb-item + .breadcrumb-item::before {
     color: #DDDDDD;
@@ -315,6 +323,10 @@ body{
     padding-right: 1.5rem;
 }
 
+
+
+
+
 @media (min-width: 576px) {
     .testimonial-carousel {
         padding-left: 4rem;
@@ -428,12 +440,12 @@ body{
 }
 
 .import-card {
-    display: flex;
+    display: grid;
     width: 100%;
-    margin: 2rem;
-
-    
-    grid-template-columns: auto 1 1fr;
+    padding: auto;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    margin-top: -1rem;
     
 }
 
@@ -486,12 +498,14 @@ body{
 
 }
 .export-card {
-    display: flex;
+    display: grid;
     width: 100%;
-    margin: 2rem;
+    padding: auto;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
 
     
-    grid-template-columns: auto 1 1fr;
+
     
 }
 
@@ -545,8 +559,12 @@ body{
 }
 
 .ports-card {
-    display: flex;
+    display: grid;
     width: 100%;
+    grid-template-columns: repeat(2, 1fr);
+    
+    gap: 1rem;
+    align-items: center;
     
 }
 
